--- a/tests/MatchingEngine.Tests/MatchingEngine.Tests.csproj
+++ b/tests/MatchingEngine.Tests/MatchingEngine.Tests.csproj
@@ -9,20 +9,24 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-        <PackageReference Include="xunit" Version="2.4.2" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+        <PackageReference Include="Akka.Hosting.TestKit" />
+        <PackageReference Include="FluentAssertions" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.visualstudio">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="3.1.2">
+        <PackageReference Include="coverlet.collector">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\MatchingEngine\MatchingEngine.csproj" />
+      <ProjectReference Include="..\..\src\MatchingEngine.Actors\MatchingEngine.Actors.csproj" />
+      <ProjectReference Include="..\..\src\MatchingEngine.Service\MatchingEngine.Service.csproj" />
+      <ProjectReference Include="..\..\src\MatchingEngine.Engine\MatchingEngine.Engine.csproj" />
     </ItemGroup>
 
 </Project>
