--- a/src/Symbology.Contracts/Symbology.Contracts.csproj
+++ b/src/Symbology.Contracts/Symbology.Contracts.csproj
@@ -7,9 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Reference Include="protobuf-net.Core">
-        <HintPath>..\..\..\..\.nuget\packages\protobuf-net.core\3.2.0\lib\net6.0\protobuf-net.Core.dll</HintPath>
-      </Reference>
+        <PackageReference Include="protobuf-net" />
     </ItemGroup>
 
     <ItemGroup>
