--- a/tests/Aaron.Contracts.Tests/Aaron.Contracts.Tests.csproj
+++ b/tests/Aaron.Contracts.Tests/Aaron.Contracts.Tests.csproj
@@ -10,13 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-        <PackageReference Include="xunit" Version="2.4.2" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+        <PackageReference Include="FluentAssertions" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.visualstudio" >
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="3.1.2">
+        <PackageReference Include="coverlet.collector" >
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -25,11 +26,5 @@
     <ItemGroup>
       <ProjectReference Include="..\..\src\Aaron.Contracts\Aaron.Contracts.csproj" />
     </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="FluentAssertions">
-        <HintPath>..\..\..\..\.nuget\packages\fluentassertions\6.10.0\lib\net6.0\FluentAssertions.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
+    
 </Project>
