--- a/src/Aeron.MediaDriver/Aeron.MediaDriver.csproj
+++ b/src/Aeron.MediaDriver/Aeron.MediaDriver.csproj
@@ -13,14 +13,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Akka">
-        <HintPath>..\..\..\..\.nuget\packages\akka\1.5.1\lib\net6.0\Akka.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+        <PackageReference Include="Akka" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" />
+        <PackageReference Include="Microsoft.Extensions.Logging" />
     </ItemGroup>
 
 </Project>
